Document spelling of SPARC and VAX.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -239,6 +239,14 @@ and code.  The following table lists some simple cases:</p>
     <td>"Objective-C"</td>
     <td>"Objective C"</td>
   </tr>
+  <tr>
+    <td>"SPARC"</td>
+    <td>"Sparc" or "sparc"</td>
+  </tr>
+  <tr>
+    <td>"VAX", "VAXen", "MicroVAX"</td>
+    <td>"vax" or "Vax", "vaxen" or "vaxes", "microvax" or "microVAX"</td>
+  </tr>
 </table>
 
 <p>"GCC" should be used for the GNU Compiler Collection, both
