Document spelling of PowerPC.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -240,6 +240,10 @@ and code.  The following table lists some simple cases:</p>
     <td>"Objective C"</td>
   </tr>
   <tr>
+    <td>"PowerPC"</td>
+    <td>"powerpc", "powerPC" or "PowerPc"</td>
+  </tr>
+  <tr>
     <td>"SPARC"</td>
     <td>"Sparc" or "sparc"</td>
   </tr>
