Mention cfg-branch and ast-optimizer-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -137,6 +137,8 @@ you may want to check out include:
   <li>gnu-win32-b20-branch</li>
   <li>dfa-branch.  This branch contains the insn scheduler with an automaton
       based pipeline hazard recognizer.  </li>
+  <li><a href="projects/cfg.html">cfg-branch</a></li>
+  <li><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></li>
 </ul>
 
 
