--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -16,6 +16,7 @@
 <li><a href="#bounds_checking_with_bounded_pointers">Bounds Checking with Bounded Pointers</a>
 <li><a href="#new_register_allocator">New register allocator</a>
 <li><a href="#ssa_for_trees">SSA for trees</a>
+<li><a href="#cfgbranch">CFG branch</a>
 <li><a href="#value_range_propagation_pass">Value range propagation pass</a>
 <li><a href="#automaton_based_pipeline_hazard_recognizer">Automaton based pipeline hazard recognizer</a>
 <li><a href="#ast_optimizer">Tree optimization passes</a>
@@ -117,6 +118,12 @@ under x86-linux and ppc-linux.</p>
 <h3><a name="ssa_for_trees">SSA for trees</a></h3>
 <p>Diego Novillo is working on implementing 
 <a href="ast-optimizer.html#ssa_for_trees">SSA analysis for trees</a>.</p>
+
+<h3><a name="cfgbranch">CFG branch</a></h3>
+<p>The <a href="cfg.html">cfg branch</a> is created to develop and
+test infrastructure for easier writing of new optimizations.  Some new
+passes (such as superblock formation, loop peeling, web construction,
+branch combining etc.)  are being implemented there.</p>
 
 
 <h3><a name="value_range_propagation_pass">Value range propagation pass</a></h3>
