--- a/htdocs/projects/cfg.html
+++ b/htdocs/projects/cfg.html
@@ -80,8 +80,8 @@ expense of 5% code size increase.</p>
 <p><em>Loop Peeling</em> is a form of loop unrolling where the
 <em>first</em> iterations from a loop are unrolled.  It removes
 <code>i</code> iterations from the beginning of a loop and adds
-<code>i</code>copies of the loop body directly before the start of the
-loop.</p>
+<code>i</code> copies of the loop body directly before the start of
+the loop.</p>
 
 <h4>Implementation in GCC</h4>
 
@@ -311,7 +311,7 @@ duplication.</li>
 
 <h2>Contributing</h2>
 
-<p>Check out the <code>cfg-branch</code> branch</p> with the command
+<p>Check out the <code>cfg-branch</code> branch with the command</p>
 
 <pre>
 cvs co -r cfg-branch gcc
