Update regression tester URL

--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -102,7 +102,7 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
  <td>powerpc-sim</td>
  <td>Daily build</td>
  <td>This target is used by <a
- href="http://www.cygnus.com/~geoffk/gcc-regression/">an automatic
+ href="http://people.redhat.com/geoffk/gcc-regression/">an automatic
  regression tester</a>.  It'll complain to you by email if you break it.
  Many unexpected Fortran failures on 2001-07-30: 60.</td>
 </tr>
