--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -236,7 +236,7 @@ tahoe. These are listed here just for completeness.
  <li>pdp11
   <br>Manufacturer: <a href="http://www.dec.com">DEC (Compaq)</a>
   <br><a href="http://www.village.org/pdp11/faq.html">PDP-11 FAQ</a>
-  <br><a href="http://www.tiac.net/users/mps/retro/">Simulators</a>
+  <br><a href="http://simh.trailing-edge.com/">Simulators</a>
 
  <li>pj (picoJava)
   <br>Manufacturer: <a href="http://www.sun.com/">Sun</a>
