Update C++ links and names.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -345,12 +345,11 @@ tahoe. These are listed here just for completeness.
 
 <h3>C++ information</h3>
 
-<p>Public websites that have info on known defects in the standard:</p>
-
 <ul>
-  <li><a href="http://www.dkuug.dk/jtc1/sc22/wg21/">defect reflector</a></li>
-  <li><a href="http://www.comeaucomputing.com/iso/">comeau reflector</a></li>
-  <li><a href="http://reality.sgi.com/austern_mti/std-c++/faq.html">c++ standards FAQ</a></li>
+  <li><a href="http://www.dkuug.dk/jtc1/sc22/wg21/">ISO Committee homepage
+      (defects list, etc)</a></li>
+  <li><a href="http://www.comeaucomputing.com/iso/">Comeau reflector</a></li>
+  <li><a href="http://www.research.att.com/~austern/csc/faq.html">C++ standards FAQ</a></li>
 </ul>
 
 <ul>
@@ -487,12 +486,12 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
   <li><a href="http://compilers.iecc.com/">Comp.compilers archive</a>
 
-  <li>Steven
-  Muchnick (1997) "Advanced Compiler Design and Implementation.
-  880pp. Online appendix includes some compiler links.
+  <li><a href="http://www.mkp.com/books_catalog/catalog.asp?ISBN=1-55860-320-4">
+  Steven Muchnick (1997) "Advanced Compiler Design and Implementation"</a>.
+  880pp. Online appendix includes some compiler links.  ISBN: 1-55860-320-4.
 
   <li><a href="http://www.bh.com/digitalpress/">Robert Morgan (1998)
-  "Building an Optimizing Compiler"</a> 300pp. ISBN: 1-55558-179-X.
+  "Building an Optimizing Compiler"</a>.  300pp. ISBN: 1-55558-179-X.
 
   <li><a href="http://www.opengroup.org/">The Open Group</a> has quite a bit
   on POSIX etc.
