Fix tagging, formatting, typos

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -1,8 +1,8 @@
 <html>
-
 <head>
-<meta name="description" content="Contributing to the GCC project.">
-<meta name="keywords" content="GCC, standards, copyright, patches, contributing">
+<meta name="description" content="Contributing to the GCC project." />
+<meta name="keywords"
+      content="GCC, standards, copyright, patches, contributing" />
 <title>Contributing to GCC</title>
 </head>
 
@@ -18,15 +18,14 @@ contributions must meet.</p>
 
 <h2>Coding Standards</h2>
 
-  <p>All contributions must conform to the <a
-  href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
-  Standards</a>.  There are also some <a
-  href="codingconventions.html">additional coding conventions for
-  GCC</a>; these include documentation and testsuite requirements as
-  well as requirements on code formatting.  Submissions which do not
-  conform to the standards will be returned with a request to address
-  any such problems.</p>
-
+<p>All contributions must conform to the <a
+href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
+Standards</a>.  There are also some <a
+href="codingconventions.html">additional coding conventions for
+GCC</a>; these include documentation and testsuite requirements as
+well as requirements on code formatting.  Submissions which do not
+conform to the standards will be returned with a request to address
+any such problems.</p>
 
 <h2>Copyright Assignment</h2>
 
@@ -43,7 +42,6 @@ your request.</p>
 
 <p>Small changes can be accepted without a copyright assignment form
 on file.</p>
-
 
 <h2>Submitting Patches</h2>
 
@@ -76,22 +74,22 @@ A ChangeLog entry as plaintext; see the various ChangeLog files for
 format and content, and the <a href="codingconventions.html">GCC
 coding conventions</a> and <a
 href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
-Standards</a> for further information.  The ChangeLog entries should be
-plaintext rather than part of the patch since the top of the ChangeLog
-changes rapidly and a patch to the ChangeLog would probably no longer
-apply by the time your patch is reviewed.
+Standards</a> for further information.  The ChangeLog entries should
+be plaintext rather than part of the patch since the top of the
+ChangeLog changes rapidly and a patch to the ChangeLog would probably
+no longer apply by the time your patch is reviewed.
 </dd>
 
 <dt>Bootstrapping and testing</dt>
 <dd>
 A list of targets where the patch survived a bootstrap of GCC.  A
-bootstrap on at least one host is required for any non-trivial change.  A
-full GCC testsuite run is also required.  You can also <a
-href="simtest-howto.html">use one or more simulators</a> to increase your
-test coverage.  With your patch, provide a list of hosts where the GCC
-testsuite was run, including an analysis of any regressions.
-Documentation changes do not require a bootstrap, but must pass <code>make
-info</code> and <code>make dvi</code>.
+bootstrap on at least one host is required for any non-trivial change.
+A full GCC testsuite run is also required.  You can also <a
+href="simtest-howto.html">use one or more simulators</a> to increase
+your test coverage.  With your patch, provide a list of hosts where
+the GCC testsuite was run, including an analysis of any regressions.
+Documentation changes do not require a bootstrap, but must pass
+<code>make info</code> and <code>make dvi</code>.
 </dd>
 
 <dt>The patch itself</dt>
@@ -108,53 +106,52 @@ as a candidate for the release branch.
 
 </dl>
 
-  <p>Don't mix together changes made for different reasons.  Send them
-  <em>individually</em>.  Ideally, each change you send should be
-  impossible to subdivide into parts that we might want to consider
-  separately, because each of its parts gets its motivation from the
-  other parts.  In particular, changes to code formatting to conform
-  to coding standards are best not mixed with substantive changes,
-  because that makes it difficult to see what the real changes are.
-  (In the case of a very large reorganization of code, it may make
-  sense to separate changes even further to make it clearer what has
-  changed; for example, by first sending structural changes that make
-  subsequent changes easier but do not change GCC's behavior, then new
-  code, then the changes that actually make use of the new code and
-  change GCC's behavior.)</p>
+<p>Don't mix together changes made for different reasons.  Send them
+<em>individually</em>.  Ideally, each change you send should be
+impossible to subdivide into parts that we might want to consider
+separately, because each of its parts gets its motivation from the
+other parts.  In particular, changes to code formatting to conform to
+coding standards are best not mixed with substantive changes, because
+that makes it difficult to see what the real changes are.  (In the
+case of a very large reorganization of code, it may make sense to
+separate changes even further to make it clearer what has changed; for
+example, by first sending structural changes that make subsequent
+changes easier but do not change GCC's behavior, then new code, then
+the changes that actually make use of the new code and change GCC's
+behavior.)</p>
 
-  <p>We accept patches as plain text (preferred for the compilers
-  themselves), MIME attachments (preferred for the web pages),
-  or as uuencoded gzipped text.</p>
+<p>We accept patches as plain text (preferred for the compilers
+themselves), MIME attachments (preferred for the web pages), or as
+uuencoded gzipped text.</p>
 
-  <p>When you have all these pieces, bundle them up in a mail message and
-  send it to
-  <a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
-  All patches and related discussion should be sent to the gcc-patches
-  mailinglist.  For further information on the GCC CVS repository, see
-  the <a href="cvs.html">Anonymous read-only CVS access</a> and 
-  <a href="cvswrite.html">Read-write CVS access</a> pages.
+<p>When you have all these pieces, bundle them up in a mail message
+and send it to <a
+href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
+All patches and related discussion should be sent to the gcc-patches
+mailinglist.  For further information on the GCC CVS repository, see
+the <a href="cvs.html">Anonymous read-only CVS access</a> and <a
+href="cvswrite.html">Read-write CVS access</a> pages.</p>
 
-  <p>If you do not receive a response to a patch that you have submitted
-  within a month or so,
-  it may be a good idea to chase it by sending a follow-up email to
-  <a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
-  Patches can occasionally fall through the cracks. Please be sure to
-  include the URL of the entry in the mailing list archive of the original
-  submission.</p>
+<p>If you do not receive a response to a patch that you have submitted
+within a month or so, it may be a good idea to chase it by sending a
+follow-up email to <a
+href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
+Patches can occasionally fall through the cracks. Please be sure to
+include the URL of the entry in the mailing list archive of the
+original submission.</p>
 
-  <p>Patches to the standard C++ library (libstdc++-v3), and its web
-  pages, and discussion of such patches, should go to <a
-  href="mailto:libstdc++@gcc.gnu.org">libstdc++@gcc.gnu.org</a> as
-  well as to gcc-patches.  Patches to the Java library (libgcj) should
-  go to <a
-  href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>
-  instead of gcc-patches.</p>
+<p>Patches to the standard C++ library (libstdc++-v3), and its web
+pages, and discussion of such patches, should go to <a
+href="mailto:libstdc++@gcc.gnu.org">libstdc++@gcc.gnu.org</a> as well
+as to gcc-patches.  Patches to the Java library (libgcj) should go to
+<a href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>
+instead of gcc-patches.</p>
 
-  <p>Everything listed here still applies if you can check in the
-  patch without further approval under the <a
-  href="cvswrite.html#policies">GCC write access policies</a>, except
-  that ChangeLog entries may be included as part of the patch since
-  no-one else will need to apply it to the tree later.</p>
+<p>Everything listed here still applies if you can check in the patch
+without further approval under the <a
+href="cvswrite.html#policies">GCC write access policies</a>, except
+that ChangeLog entries may be included as part of the patch since
+no-one else will need to apply it to the tree later.</p>
 
 </body>
 </html>
