--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -116,11 +116,11 @@ developer to follow the appropriate policies.</p>
   </dd>
 
   <dt>Write after approval.</dt>
-  <dd><p>This is folks that make regular contributions, but do not fall
-  into one of the two previous categories.  People with write after
-  approval need to submit their patches to the list; once the patches
-  have been approved by the appropriate maintainers the patches may be
-  checked into the GCC sources.</p></dd>
+  <dd><p>This is folks that make regular contributions, but do not
+  fall into one of the two previous categories.  People with write
+  after approval need to submit their patches to the list; once the
+  patches have been approved by the appropriate maintainers the
+  patches may be checked into the GCC sources.</p></dd>
 </dl>
 
 <p>The list of folks with write access to the repository can be found
