Add i686-pc-linux-gnu (Mandrake 8.1, glibc 2.2.4). The original mail for this was November 18.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -157,6 +157,11 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful (Mandrake 8.1, glibc 2.2.4)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Successful (Red Hat 6.2)</td>
 </tr>
 
