Assorted markup fixes.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -111,7 +111,7 @@
   <b>gcc-prs</b> list.</li>
 </ul>
 
-<p>To post a message, just send mail to <i>listname</i><tt>@gcc.gnu.org</tt>.
+<p>To post a message, just send mail to <i>listname</i><code>@gcc.gnu.org</code>.</p>
 
 <h2><a name="msgsize">Policies</a></h2>
 
@@ -174,26 +174,26 @@ lists via this form:
   <input type="text" name="username" size="14">
  <br>
   <input type="checkbox" name="digest">Digest version
-  <tt>&nbsp;</tt>
+  &nbsp;
   <select name="operation">
     <option value="subscribe">subscribe
     <option value="unsubscribe">unsubscribe
   </select>
-  <tt>&nbsp;</tt>
+  &nbsp;
  <input type="Submit" name="submit" value="Process that!">
 </form>
 </blockquote>
 
 <p>If you're having trouble getting off a list, look at the
-<b><tt>List-Unsubscribe:</tt></b> header on a message sent to that list.
+<b><code>List-Unsubscribe:</code></b> header on a message sent to that list.
 It has your subscribed address included in it.  Send mail to that address
-(omit the <tt>mailto:</tt> part) and you'll be unsubscribing yourself from
+(omit the <code>mailto:</code> part) and you'll be unsubscribing yourself from
 that mailing list.  You'll need to confirm the unsubscription, of course.
 
-<p>Please trust in the <tt>List-Unsubscribe:</tt> header.  Every person
+<p>Please trust in the <code>List-Unsubscribe:</code> header.  Every person
 who has said "I can't get off this list!  Unsubscribe me!" has found,
 with enough prodding, that sending mail to the address listed in
-<tt>List-Unsubscribe:</tt> does the trick.
+<code>List-Unsubscribe:</code> does the trick.
 
 <h2>Filtering</h2>
 
@@ -232,7 +232,7 @@ currently work for the <i>gcc</i> list).</p>
 Blackhole Lists (RBLs) are consulted.  If you're sending mail from a
 site that is listed in one of these RBLs, contact your site administrator
 about fixing your mail setup.  Spammers are taking advantage of your
-site to relay their spam.
+site to relay their spam.</p>
 
 <p>The following RBLs are consulted on all e-mail before it is distributed:
 <a href="http://www.mail-abuse.org/rbl/">MAPS RBL</a>, 
@@ -246,7 +246,7 @@ site to relay their spam.
 of the GCC mailing lists, some simple transformations are done on the
 e-mail addresses.  It isn't perfect, but short of destructively modifying
 addresses or omitting addresses altogether, there isn't a whole lot we
-can do right now.
+can do right now.</p>
 
 <p>See also <a href="spam.html">information about dealing with spam on
 the lists</a>.</p>
