--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -118,7 +118,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>compound literals</em></td>
-    <td></td><td></td><td>Broken</td>
+    <td></td><td>Done</td><td></td>
     <td></td>
 </tr>
 
@@ -349,12 +349,8 @@ syntax for arrays to be declared with <code>[*]</code> in parameter
 declarations is present, the semantics are not; and in general the
 implementation of VLAs has not been checked against C99 requirements.</li>
 
-<li>Compound literals have some problems: non-constant compound
-literals are not properly treated as lvalues;
-non-<code>const</code> compound literals need
-to be put in a temporary of appropriate storage duration (possibly
-copied from read-only storage, depending on the literal; or placed in
-writable storage, when of static storage duration).</li>
+<li><code>const</code>-qualified compound literals could share storage
+with each other and with string literals, but currently don't.</li>
 
 <li>The constraints on where structures with flexible array members
 may be used (that they, and unions containing them (possibly
