Add gccadmin list.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -91,6 +91,11 @@
   is a read-only moderate volume list where regression
   results for the GCC compilers are posted.</li>
 
+  <li><b><a href="http://gcc.gnu.org/ml/gccadmin/">gccadmin</a></b>
+  is a read-only moderate volume list where output from
+  <code>cron</code> jobs run by the <code>gccadmin</code> account on
+  gcc.gnu.org is posted.</li>
+
   <li><b><a href="http://gcc.gnu.org/ml/java-prs/">java-prs</a></b>
   is a read-only list which tracks Java-related problem reports as
   they are entered into our GNATS database.  Messages sent here are
