Add powerpc-ibm-aix4.2.1.0 (C and C++).

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -226,6 +226,11 @@
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.2.1.0</td>
+<td>Successful (C and C++)</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.3.2.0</td>
 <td>Successful</td>
 </tr>
