--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -31,6 +31,11 @@
 </tr>
 
 <tr>
+<td>alphaev5-dec-osf4.0e</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>alphaev5-dec-osf5.1</td>
 <td>Successful</td>
 </tr>
