Add i686-pc-linux-gnu (Red Hat 7.1, glibc 2.2.2, kernel 2.4.9-12) for 3.0.2. (reported 2001-12-07)

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -187,6 +187,11 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful (Red Hat 7.1, glibc 2.2.2, kernel 2.4.9-12)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Successful (Red Hat 7.2, glibc 2.2.4, kernel 2.4.13)</td>
 </tr>
 
